feat: add pagination to product microservice